feat: enhance build process with MOTOR_CONFIG support and update documentation

--- a/doc/编译教程.md
+++ b/doc/编译教程.md
@@ -22,6 +22,26 @@
     idf.py build
     ```
     首次编译耗时会比较长
+    
+    **可选：指定电机通道配置**
+    
+    如果需要编译特定的电机通道版本，可以通过 CMake 参数指定：
+    
+    - 编译 4 通道版本：
+      ```bash
+      idf.py build -DMOTOR_CONFIG=MOTORS_4
+      ```
+    
+    - 编译 6 通道版本：
+      ```bash
+      idf.py build -DMOTOR_CONFIG=MOTORS_6
+      ```
+    
+    - 编译 8 通道版本（默认）：
+      ```bash
+      idf.py build -DMOTOR_CONFIG=MOTORS_8
+      ```
+      或直接使用 `idf.py build`（不传参数默认为 8 通道）
 7. 连接设备并烧录
    ```bash
    idf.py -p PORT flash
